cmake_minimum_required(VERSION 3.25)
project(coding_usaco_bronze)

set(CMAKE_CXX_STANDARD 11)
include_directories(/usr/local/include)
add_executable(1919A hw01/1919A.cpp)
add_executable(shellgame hw01/shellgame.cpp)
add_executable(1919B hw01/1919B.cpp)
add_executable(1919C hw01/1919C.cpp)
add_executable(263A hw01/263A.cpp)
add_executable(cowcollege hw01/cowcollege.cpp)
add_executable(thecowsignal hw01/thecowsignal.cpp)
add_executable(speedingticket hw01/speedingticket.cpp)
add_executable(thelostcow hw01/thelostcow.cpp)
add_executable(thebovineshuffle hw01/thebovineshuffle.cpp)
add_executable(thebucketlist hw01/thebucketlist.cpp)